--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: ['main']
   pull_request:
-    branches: [ 'main' ]
+    branches: ['main']
 
 env:
   REGISTRY: docker.io
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 22.x ]
+        node-version: [22.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,65 +29,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run test
-  push_to_registry:
-    needs: test
-    runs-on: ubuntu-latest
-    outputs:
-      sha_short: ${{ steps.vars.outputs.sha_short }}
-
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set outputs
-        id: vars
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: |
-            ismael3s/citynexus.notifications:latest
-            ismael3s/citynexus.notifications:${{ steps.vars.outputs.sha_short }}
-          context: .
-          file: ./Dockerfile
-
-  update_k8s:
-      permissions: 
-        contents: write
-      needs: push_to_registry
-      runs-on: ubuntu-latest
-      env:
-        DOCKER_IMAGE: ismael3s/citynexus.notifications:${{ needs.push_to_registry.outputs.sha_short }}
-      steps:
-        - name: Checkout the repo
-          uses: actions/checkout@v4
-          with:
-            ref: main
-            token: ${{ secrets.CI_TOKEN }}
-            repository: ismael3s/CityNexus.K8S
-            persist-credentials: false 
-            fetch-depth: 0             
-        - name: Update Image Deployment
-          run: |
-              wget https://github.com/mikefarah/yq/releases/download/v4.13.5/yq_darwin_amd64.tar.gz -O yq_darwin_amd64.tar.gz && tar -xvf yq_darwin_amd64.tar.gz && chmod +x yq_darwin_amd64 && mv yq_darwin_amd64 yq
-              yq e '.spec.template.spec.containers[0].image = env(DOCKER_IMAGE)' -i CityNexus.Notifications/deployment.yml            
-              rm -f yq yq.1 install-man-page.sh yq_darwin_amd64.tar.gz
-        - name: Commit and push the changes
-          uses: actions-js/push@master
-          with:
-            github_token: ${{ secrets.CI_TOKEN }}
-            branch: main
-            repository: ismael3s/CityNexus.K8S
-            message: "Update CityNexus.Notifications image to $DOCKER_IMAGE"
+      - name: Run Unit Tests
+        run: npm test .unit
+      - name: Run Integration Tests
+        run: npm test .integration
