--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/terminus": "^10.2.3",
     "@sequelize/postgres": "^7.0.0-alpha.43",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cls-hooked": "^4.2.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
