--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "jsx": "react"
+    "jsx": "react",
+    "allowJs":true
   }
 }
