build: update postgres readiness condition

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
       POSTGRES_DB: mock_bank
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U root -d mock_bank']
+      interval: 5s
+      retries: 5
+      start_period: 1s
+      timeout: 10s
   api:
     container_name: MockBank.Api
     build:
@@ -18,7 +24,8 @@ services:
     ports:
       - '3000:3000'
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
       DATABASE_HOST: postgres
       DATABASE_PORT: 5432
