--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cls-hooked": "^4.2.2",
+    "nestjs-pino": "^4.1.0",
     "pg": "^8.13.0",
+    "pino": "^9.5.0",
+    "pino-http": "^10.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
